--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,10 @@ li {
     color: #5cb3ff;
 }
 
-section :nth-child(even) {
-    background-color: #f8f8f8;
+/*section :nth-child(even) {
+    background-color: #f8f8f8; 
 
-}
+} */
 
 .section__title {
     margin-bottom: 20px;
@@ -282,11 +282,11 @@ nav {
   }
   .project:hover .project__wrapper:before {
     transform: translateY(0);
-    opacity: 0.7;
+    opacity: 0.1;
   }
   .project:hover .project__img {
     transform: scale(1.07);
-    filter: blur(5px);
+    filter: blur(5px); 
   }
   
   .project:hover .project__description {
